<resources>
    <string name="app_name">ShoeStore</string>

    <string name="login_title">Login</string>
    <string name="welcome_title">Welcome</string>
    <string name="instructions_title">Instructions</string>
    <string name="list_title">List</string>
    <string name="detail_title">Detail</string>
    <string name="logout">Logout</string>

    <string name="instruction_one">Will see all available shoes.</string>
    <string name="instruction_two">You can also add a new shoe clicking on the add button.</string>
    <string name="shoes_list">Shoes List.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="add">Add</string>

    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
</resources>
