<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Simple layout without any special position between controls -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInstruction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_one" />

        <TextView
            android:id="@+id/tvInstruction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_two" />

        <Button
            android:id="@+id/btList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center_horizontal"
            android:text="@string/shoes_list" />

    </LinearLayout>
</layout>